--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,6 @@
   <br><br>
   <input type="submit" value="Submit"></fieldset>
 </form>
-<a href="/search?type=actor&page=0&query=西野翔">Images List</a>
+<a href="/search?type=main">Images List</a>
 </body>
 </html>
