fix some issues

--- a/html/index.html
+++ b/html/index.html
@@ -1,20 +1,10 @@
 ﻿<html>
 <header>
-<title>Welcome, Let's Go!</title>
+<title>精彩内容管理系统</title>
 </header>
 <body>
-<form action="/task-list" method="POST">
-  <fieldset>
-  <legend>Website information:</legend>
-  站点编号:<br>
-  <input type="text" name="site-id" value="1">
-  <br>起始页号:<br>
-  <input type="text" name="start-page-no" value="1">
-  <br>结束页号:<br>
-  <input type="text" name="end-page-no" value="10">
-  <br><br>
-  <input type="submit" value="Submit"></fieldset>
-</form>
-<a href="/search?type=main">Images List</a>
+<a href="/search?type=main">搜索内容</a>
+<br>
+<a href="/taskmgr">任务管理</a>
 </body>
 </html>
